; ModuleID = '/home/carl/AnghaBench/vlc/modules/text_renderer/freetype/fonts/extr_darwin.c_getPathForFontDescription.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/text_renderer/freetype/fonts/extr_darwin.c_getPathForFontDescription.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kCTFontURLAttribute = common dso_local global i32 0, align 4
@kCFURLPOSIXPathStyle = common dso_local global i32 0, align 4
@kCFStringEncodingUTF8 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @getPathForFontDescription(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @kCTFontURLAttribute, align 4
  %8 = call i32 @CTFontDescriptorCopyAttribute(i32 %6, i32 %7)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @kCFURLPOSIXPathStyle, align 4
  %11 = call i32 @CFURLCopyFileSystemPath(i32 %9, i32 %10)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @kCFStringEncodingUTF8, align 4
  %14 = call i8* @FromCFString(i32 %12, i32 %13)
  store i8* %14, i8** %5, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @CFRelease(i32 %15)
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @CFRelease(i32 %17)
  %19 = load i8*, i8** %5, align 8
  ret i8* %19
}

declare dso_local i32 @CTFontDescriptorCopyAttribute(i32, i32) #1

declare dso_local i32 @CFURLCopyFileSystemPath(i32, i32) #1

declare dso_local i8* @FromCFString(i32, i32) #1

declare dso_local i32 @CFRelease(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
